--- a/app/views/layouts/_current_user_links.html.erb
+++ b/app/views/layouts/_current_user_links.html.erb
@@ -11,5 +11,5 @@
   </li>
 
 
-  <li class= <%= "active" if params[:controller] == "jury" %>><%= link_to t("jury"),jury_choose_competition_path if user.in_jury?  %></li>
+  <li class= <%= "active" if params[:controller] == "jury" %>><%= link_to t("jury"),jury_choose_competition_path  %></li>
   <li class= <%= "active" if params[:controller] == "registrations" %>> <%= link_to I18n.t("change_password"), edit_user_registration_path if user_signed_in? %></li>
