--- a/app/assets/stylesheets/jury.css.scss
+++ b/app/assets/stylesheets/jury.css.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the jury controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+.red {
+  color: red;
+}
+
+.silver {
+  color: silver;
+}
