--- a/app/views/admin/competitions/view_posted.html.slim
+++ b/app/views/admin/competitions/view_posted.html.slim
@@ -11,7 +11,7 @@ table.table.table-striped
       th
       th Голоса
       th Место
-      th Показатели
+      th.col-md-3 Показатели
       th 
       th 
       th 
