--- a/app/views/users/select_roles.html.erb
+++ b/app/views/users/select_roles.html.erb
@@ -6,7 +6,7 @@
 <%= simple_form_for :roles, :url => users_path, method: :get do |f| %>
    
     <div class="form-group">
-      <%= f.input :role_id, selected: 1, label: "Role", collection: @roles,  :include_blank => "Без роли", label_method: -> (c) { c[1] }, value_method: -> (c) { c[0] }, :input_html => { class: "form-control"} %>
+      <%= f.input :name, selected: 1, label: "Role", collection: @roles,  :include_blank => "Без роли", label_method: -> (c) { c }, value_method: -> (c) { c }, :input_html => { class: "form-control"} %>
     </div>
 
   <%= f.button :submit, value: "Submit", class: "btn btn-default" %>
