--- a/app/views/documents/_td.html.erb
+++ b/app/views/documents/_td.html.erb
@@ -1,9 +1,8 @@
-<td><%= doc.title %></td>
+<td><%= link_to doc.title, document_path(doc)  %></td>
 <td><%= ld(doc.creation_date) %></td>
 <td><%= doc.likes %></td>
 <td><%= doc.dislikes %></td>
 <td><%= t("enums.document.status.#{doc.status}") %></td>
-<td><%= link_to content_tag(:span,"",class: "ui-icon ui-icon-folder-open"), document_path(doc) %></td>
 
 <%- if doc.voting?  %> 
   <td><%= link_to like_icon(1), vote_document_path(doc), method: :put, data: { confirm: 'Are you sure?' }, remote: true unless current_user.liked?(doc)%></td>
