--- a/app/views/competitions/_competitions.html.erb
+++ b/app/views/competitions/_competitions.html.erb
@@ -40,7 +40,7 @@
         <td><%= link_to request_icon(competition.can_upload_photo?(current_user)), competition_requests_path(competition), 
           title: hint, method: :post if can?(:request, competition) %></td>
 
-        <td><%= link_to start_icon, competition_best_index_path(competition) if can?(:jury, competition) %></td>
+        <td><%= link_to start_icon, competition_best_index_path(competition) if competition.ready_to_be_published? %></td>
 
        </tr>
     <% end %>
