--- a/app/views/devise/registrations/new.ru.html.erb
+++ b/app/views/devise/registrations/new.ru.html.erb
@@ -3,8 +3,8 @@
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => {role:'form',:class => 'form-horizontal' }) do |f| %>
   <%= f.error_notification %>
   <%= display_base_errors resource %>
-  
-  
+
+
   <%= f.input :login, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :last_name, :autofocus => true, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
@@ -12,16 +12,18 @@
 
   <%= f.input :birth_date, as: :string, :input_html => {class: "form-control dp", :autocomplete => "off"} %>
 
-  
+
 
   <%= f.input :email, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :password, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
   <%= f.input :password_confirmation, :required => true, :input_html => {class: "form-control", :autocomplete => "off"} %>
-  
+
   <br>
-  <%= render "terms" %>  
+  <%= render "terms" %>
   <%= f.input :terms_of_service,  as: :boolean, :input_html => {style: "margin: 0px"} %>
-  
+
+  <%= recaptcha_tags %>
+
   <br/>
   <%= f.button :submit, 'Зарегистрироваться', :class => 'btn-primary' %>
   <br/>
