--- a/app/views/layouts/_moder_menu.html
+++ b/app/views/layouts/_moder_menu.html
@@ -1,3 +1,4 @@
+<li><%=link_to "Новости",admin_novelties_path if can? :manage, Novelty %></li>
 <li><%=link_to "Тикеты",admin_messages_path if can? :manage,Message %></li>
 <li><%=link_to "Фотографии",admin_photos_path if can? :manage,Photo %>  </li>
 
