--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -77,10 +77,10 @@
 
 
 <script>
-$(document).ready(function() {
-  $('.dp').datepicker({
-    format: "dd.mm.yyyy",
-    language:  "<%= I18n.locale %>"
-});
- });
+# $(document).ready(function() {
+#   $('.dp').datepicker({
+#     format: "dd.mm.yyyy",
+#     language:  "<%= I18n.locale %>"
+# });
+#  });
 </script>
