поправил лого и фон

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -70,7 +70,7 @@ position:relative;right:50%;float:left;margin:0;list-style:none
 
 
 .back {
-    background: asset_url('a.jpg');
+    background: #fff;
 
 }
 
