--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,7 @@
       <section id="branding">
       
 
-        <%= link_to image_tag("logo1.jpg"),root_path %>
+        <%= link_to image_tag("new-logo.jpg"),root_path %>
      
 
       
